# support-chain

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  apirpc.md  build-macos.md  build-windows.md  genesis.json  import-builders.json  init-builders.json  smartcontract.md  test-memo.md
blockchain/: CMakeLists.txt
blockchain/chain/: CMakeLists.txt  authority_utls.cpp  authoritys.cpp  block.cpp  block_pack.cpp  blockchain_config.cpp  cash_indexes.cpp  cash_utils.cpp  chain_stream.cpp  chain_time.cpp  chain_utils.cpp  chain_xmax.cpp  coin_indexes.cpp  contract_object.cpp  erc_indexes.cpp  forkchain.cpp  jsvm_util.cpp  jsvm_xmax.cpp  message_context_xmax.cpp  native_handler.cpp  system_indexes.cpp  transaction.cpp  transaction_context_xmax.cpp  vm_native_interface.cpp  vm_native_interface_database.cpp  vm_native_interface_event.cpp  vm_native_interface_math.cpp  vm_native_interface_message.cpp  vm_native_interface_transaction.cpp  vm_xmax.cpp  wast_to_wasm.cpp  xmax_indexes.cpp
blockchain/chain/cash/: cash_block.cpp  cash_detail.cpp  cash_mint.cpp  cash_utils.cpp
blockchain/chain/coin/: coin_block.cpp
blockchain/chain/include/: account_type.hpp  authoritys.hpp  authoritys_utils.hpp  block.hpp  block_pack.hpp  blockchain_config.hpp  blockchain_exceptions.hpp  blockchain_setup.hpp  blockchain_types.hpp  builder_rule.hpp  builder_schedule.hpp  cash_utils.hpp  chain_init.hpp  chain_stream.hpp  chain_time.hpp  chain_utils.hpp  chain_xmax.hpp  forkchain.hpp  indexes.hpp  jsvm_util.h  jsvm_util.hpp  jsvm_xmax.h  jsvm_xmax.hpp  mapped_ptr.hpp  message.hpp  message_context_xmax.hpp  message_handling_contexts.hpp  message_xmax.hpp  native_handler.hpp  pending_block.hpp  producer_schedule.hpp  record_functions.hpp  transaction.hpp  transaction_context_xmax.hpp  transaction_request.hpp  transaction_response.hpp  vm_native_interface.hpp  vm_native_interface_database.hpp  vm_native_interface_event.hpp  vm_native_interface_math.hpp  (+5 more)
blockchain/chain/include/cash/: cash_block.hpp  cash_detail.hpp  cash_mint.hpp  cash_transaction.hpp  cash_types.hpp  cash_utils.hpp
blockchain/chain/include/coin/: coin_block.hpp  coin_types.hpp
blockchain/chain/include/objects/: account_contract.hpp  (+28 more)
blockchain/chain/jsvm_objbind/: Int64Bind.cpp  Int64Bind.h  MessageBind.cpp  MessageBind.h  UInt128Bind.cpp  UInt128Bind.h  V8Bind.cpp  V8Bind.h  V8BindBase.h  V8BindObject.h
blockchain/chain/jsvm_util/: js_abi_decode.cpp  js_abi_decode.h
blockchain/chain/objects/: account_contract.cpp  account_object.cpp  vote_objects.cpp
blockchain/egenesis/: CMakeLists.txt  egenesis_brief.cpp.tmpl  egenesis_full.cpp.tmpl  egenesis_none.cpp  embed_genesis.cpp
blockchain/egenesis/include/: egenesis.hpp
blockchain/native_contract/: CMakeLists.txt  cash_contract.cpp  genesis_state.cpp  native_contract_chain_init.cpp  xmax_contract.cpp  xmax_voting.cpp
blockchain/native_contract/include/: genesis_state.hpp  native_contract_chain_init.hpp  xmax_contract.hpp  xmax_voting.hpp
contract_bind/: CMakeLists.txt  DBBind.cpp  DBBind.h  Int64Bind.cpp  MessageBind.cpp  MessageBind.h  UInt128Bind.cpp  UInt128Bind.h  UtilBind.cpp  UtilBind.h  V8AllBind.cpp  V8AllBind.h  V8BindObject.h
contracts_cpp/src/xmaxlib/: CMakeLists.txt  xmaxlib.cpp
foundation/baseapp/: CMakeLists.txt  application.cpp
foundation/baseapp/include/: application.hpp  plugin.hpp
foundation/basechain/: CMakeLists.txt  basechain.cpp
foundation/basechain/include/: basechain.hpp
foundation/basechain/test/: CMakeLists.txt  test.cpp
foundation/basecli/: CMakeLists.txt  basecli.cpp  command.cpp  utils.cpp  widget.cpp
foundation/basecli/include/: basecli.hpp  bases.hpp  cmdstack.hpp  command.hpp  utils.hpp  widget.hpp
foundation/basetypes/: CMakeLists.txt  abi_serializer.cpp  address.cpp  asset.cpp  basemisc.cpp  basetypes.cpp  longname.cpp  publickey.cpp  safemath.cpp  shortcode.cpp  shortname.cpp
foundation/basetypes/include/: abi_serializer.hpp  address.hpp  asset.hpp  basedef.hpp  basemisc.hpp  basetypes.hpp  gentypes.hpp  longname.hpp  publickey.hpp  safemath.hpp  shortcode.hpp  shortname.hpp  xmaxtypes.hpp
foundation/basetypes/types_generator/: CMakeLists.txt  type_generator.cpp  type_parser.cpp  types.xmax
launch/xmaxcl/: CMakeLists.txt  chain_get.cpp  main.cpp
launch/xmaxcl/include/: chain_get.hpp
launch/xmaxrun/: CMakeLists.txt  main.cpp
launch/xmaxwallet/: CMakeLists.txt  main.cpp
plugins/: CMakeLists.txt
plugins/blockbuilder_plugin/: CMakeLists.txt  blockbuilder_plugin.cpp
plugins/blockbuilder_plugin/include/: blockbuilder_plugin.hpp  import_builder_state.hpp  initial_builder_state.hpp
plugins/blockchain_plugin/: CMakeLists.txt  blockchain_plugin.cpp
plugins/blockchain_plugin/include/: blockbuilder_plugin.hpp  blockchain_plugin.hpp
plugins/chaindata_plugin/: CMakeLists.txt  chaindata_plugin.cpp
plugins/chaindata_plugin/include/: chaindata_plugin.hpp  connection_xmax.hpp
plugins/chainhttp_plugin/: CMakeLists.txt  chainhttp_plugin.cpp
plugins/chainhttp_plugin/include/: chainhttp_plugin.hpp
plugins/chainnet_plugin/: CMakeLists.txt  chainnet_plugin.cpp  connection_xmax.cpp  sync_main.cpp
plugins/chainnet_plugin/include/: chainnet_plugin.hpp  connection_xmax.hpp  message_buffer.hpp  protocol.hpp  sync_main.hpp
plugins/contractutil_plugin/: CMakeLists.txt  contractutil_plugin.cpp
plugins/contractutil_plugin/include/: contractutil_plugin.hpp
plugins/customised_plugin/: CMakeLists.txt  customised_plugin.cpp
plugins/customised_plugin/include/: customised_plugin.hpp
plugins/jsbind_plugin/: CMakeLists.txt  MessageBind.cpp  MessageBind.h  V8AllBind.cpp
plugins/mongodb_plugin/: CMakeLists.txt  mongodb_plugin.cpp
plugins/mongodb_plugin/include/: mongodb_plugin.hpp
plugins/wallet_plugin/: CMakeLists.txt  wallet_plugin.cpp
plugins/wallet_plugin/include/: wallet_plugin.hpp
tests/chain_test/: CMakeLists.txt  foundation_test.hpp  main.cpp  objects_test.cpp  objects_test.hpp
tests/script_test/: CMakeLists.txt  script_test.cpp
tools/: CMakeLists.txt
tools/client_tools/: CMakeLists.txt  main.cpp
(+125 files in other folders)
