add_subdirectory( blockchain_plugin )
add_subdirectory( chainnet_plugin )
add_subdirectory(blockbuilder_plugin)
add_subdirectory(chainhttp_plugin)
add_subdirectory(mongodb_plugin)
add_subdirectory(contractutil_plugin)
add_subdirectory(wallet_plugin)
if(USE_V8_VM)
add_subdirectory(jsbind_plugin)
endif()